[project]
name = "savegame_analysis"
version = "0.4-pre-2"
description = "Python script to track various Etterna statistics"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["maturin>=1.0, <2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
